@@ -3,6 +3,7 @@
 	* nnimap.el (nnimap-update-info): If the server doesn't return any
 	useful info, just use the previous info.
 	(nnimap-update-info): Prefer old info over start-article.
+	(nnimap-update-qresync-info): Finish implementing QRESYNC.
 
 2010-10-10  Andrew Cohen  <cohen@andy.bu.edu>
 
